discussion/kv_engine/184517/184517_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-20017: Add support for retrieving per-thread cpu usage

Use mcstat "threads details" or look in prometheus

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-05 19:48:47.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-05 20:02:40.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22355/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:609:20: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
            sigar::iterate_threads(
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:617:13: error: use of undeclared identifier "LOG_WARNING" [clang-diagnostic-error]
            LOG_WARNING("{} - sigar::iterate_process_threads: {}",
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/stats.cc:245:24: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
                sigar::iterate_threads([&kvCollector](auto tid,
                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22355/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:609:20:
error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22355/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51686/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/stats.cc(245): error C2039: "iterate_threads": is not a member of "sigar" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51686/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43392/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:609:20:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43392/ )

CMake error: CMakeLists.txt:170 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43392/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1118/ : FAILURE

Compile error at [2023-01-05T19:52:33.491Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/stats.cc:245:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1118/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12076/ : FAILURE

Compile error at [2023-01-05T19:50:52.927Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/stats.cc:245:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12076/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12163/ : FAILURE

Compile error at [2023-01-05T19:59:08.837Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/stats.cc:245:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12163/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24399/ : FAILURE

Compile error at [2023-01-05T19:53:05.662Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/stats.cc:245:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24399/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25681/ : FAILURE

Compile error at [2023-01-05T19:51:24.396Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats.cc:245:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25681/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23926/ : FAILURE

Compile error at [2023-01-05T19:59:31.798Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/stats.cc:245:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23926/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32818/ : FAILURE

Compile error at [2023-01-05T19:50:47.407Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/stats.cc:245:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32818/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24823/ : FAILURE

Compile error at [2023-01-05T19:53:33.879Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:609:20:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24823/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21983/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
